fix index section accurate align

--- a/resources/assets/sass/common.sass
+++ b/resources/assets/sass/common.sass
@@ -879,6 +879,8 @@ section.section_solution
 
   .col_address,.col_question,.col_corp
     color: $color_grey_light
+    
+
 
   h5
     font-size: 18px
@@ -1019,6 +1021,7 @@ section.section_solution
       width: 100%
       height: auto
       margin: 0
+      margin-bottom: grid_sz(0,2)
     .go_to_topbtn
       bottom: grid_sz(0,1)
       right: grid_sz(0,1)
